# protobuf

./: CHANGES.txt  CMakeLists.txt
cmake/: .CMakeLists.txt.un~  CMakeLists.txt  install.cmake
java/core/src/main/java/com/google/protobuf/: GeneratedMessageV3.java
java/src/main/java/com/google/protobuf/: AbstractMessage.java
php/tests/: test.pb.php  test_include.pb.php
python/google/protobuf/internal/: testing_refleaks.py
src/google/protobuf/: struct.pb.cc  struct.pb.h  type.pb.cc  type.pb.h
src/google/protobuf/stubs/: port.h
src/google/protobuf/util/internal/: json_stream_parser_test.cc
